--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "lodash": "^4.17.2",
     "webpack": "^1.14.0"
   },
+  "browser": {
+    "./rng.js": "./rng-browser.js"
+  },
   "devDependencies": {
     "babel-core": "^6.20.0",
     "babel-loader": "^6.2.9",
